objects/ERP_Message__c.object
<CustomObject>
    <fields>
        <fullName>Account_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate the Asset change on Service Order</description>
        <label>Asset Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Message_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate that the Customer Credit Message has been received from MoveX</description>
        <label>Credit Message Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Credit_Error_Msg__c</fullName>
        <description>This field show the Customer credit code value</description>
        <label>Customer Credit Error Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Credit_Message__c</fullName>
        <description>This is to store the Customer Credit Message based on the Payer</description>
        <label>Customer Credit Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MRO_Messages_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate that the MRO Messages have been received from MoveX</description>
        <label>MRO Messages Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRO_Messages__c</fullName>
        <description>This is to store the MRO Messages related to the Customer</description>
        <label>MRO Messages</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Payer_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate the Payer change on Service Order</description>
        <label>Payer Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>FSL ERP Messages</relationshipLabel>
        <relationshipName>FSL_ERP_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Territory_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate the Service Territory change on Service Order</description>
        <label>Service Territory Change</label>
        <type>Checkbox</type>
    </fields>
    <label>FSL ERP Message</label>
    <nameField>
        <label>ERP Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL ERP Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>